name:                l1c
version:             0.1.0.0
synopsis:            compiler for L1
license:             MIT
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
copyright:           2016 Sharif Olorin
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  ghc-options:         -Wall

  exposed-modules:     Jouet.L1.Grammar
                       Jouet.L1.Parser
                       Jouet.L1.Parser.Predicate

  build-depends:       base >= 3 && < 5
                     , attoparsec >= 0.10 && < 0.14
                     , bytestring == 0.10.*

  default-language:    Haskell2010
