name:                l1c
version:             0.1.0.0
synopsis:            compiler for L1
license:             MIT
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
copyright:           2016 Sharif Olorin
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  ghc-options:         -Wall

  exposed-modules:     Jouet.L1.Grammar
                       Jouet.L1.Parser
                       Jouet.L1.Parser.Helper
                       Jouet.L1.Parser.Predicate
                       Jouet.L1.Render

  build-depends:       base >= 3 && < 5
                     , attoparsec >= 0.10 && < 0.14
                     , bytestring == 0.10.*

  default-language:    Haskell2010

test-suite test
  hs-source-dirs:      test

  main-is:             test.hs

  other-modules:       Test.Jouet.L1.Gen
                       Test.Jouet.L1.Parser

  type:                exitcode-stdio-1.0

  default-language:    Haskell2010

  build-depends:       base >=4.5 && <5
                     , QuickCheck >= 2.7 && < 2.9
                     , attoparsec >= 0.10 && < 0.14
                     , bytestring == 0.10.*
                     , hspec >= 2.2 && < 3
                     , l1c
